Frontend can communicate with backend, but missing CORS setup... Will configure this later this week

--- a/Frontend/Shared/NavMenu.razor
+++ b/Frontend/Shared/NavMenu.razor
@@ -15,8 +15,9 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="customers">
+                <span class="oi oi-plus" aria-hidden="true"></span>
+                <span>Customers</span>
             </NavLink>
         </div>
         <div class="nav-item px-3">
